# Face-correction

./: README.md
cpp/: CMakeLists.txt  _experimental.py  demo.cpp
cpp/lib.facecorr/: CMakeLists.txt  fcorr.cpp  fcorr.hpp
cpp/lib.facecorr/math/: image.cpp  image.hpp  skin_segm.cpp  skin_segm.hpp  skin_weights.hpp
